--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="group">
                 <img src="./img/instagram-logo.png" alt="instagram logo">
                 <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
+                    <img src="./img/download.png" alt="foto de perfil">
                 </div>
                 
                     <a href="#" class="instagram-login">Continue como usuario</a>
